--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,8 +1,9 @@
 .bt-glass {
   padding: 10px;
   border: 2px solid blue;
-  background: yellow;
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 20px;
+  backdrop-filter: blur(30px);
 }
 
 .bt-glass:hover {
